--- a/PopupShowAlert.xib
+++ b/PopupShowAlert.xib
@@ -48,6 +48,9 @@
                             <buttonConfiguration key="configuration" style="plain" title="Close">
                                 <color key="baseForegroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                             </buttonConfiguration>
+                            <connections>
+                                <action selector="tapOnClose:" destination="-1" eventType="touchUpInside" id="uHX-Ht-kQ3"/>
+                            </connections>
                         </button>
                     </subviews>
                     <color key="backgroundColor" systemColor="systemBackgroundColor"/>
